--- a/src/buttons/misc.scss
+++ b/src/buttons/misc.scss
@@ -34,30 +34,26 @@
 //
 // Typically used as a "cancel" button next to a .btn
 .btn-invisible {
-  color: var(--color-text-link);
+  color: var(--color-btn-text);
   background-color: transparent; // Reset default gradient backgrounds and colors
   border: 0;
-  border-radius: 0;
   box-shadow: none;
 
   &:hover,
+  &:focus,
   &.zeroclipboard-is-hover {
-    color: var(--color-text-link);
-    background: none;
+    background-color: var(--color-btn-hover-bg);
     outline: none;
     box-shadow: none;
   }
 
   &:active,
-  &:focus,
   &.selected,
   &[aria-selected=true],
   &.zeroclipboard-is-active {
-    color: var(--color-text-link);
-    background: none;
-    border-color: var(--color-btn-active-border);
+    background-color: var(--color-btn-active-bg);
+    box-shadow: none;
     outline: none;
-    box-shadow: var(--color-btn-focus-shadow);
   }
 
   &:disabled,
